# IMback

./: .gitignore  CMakeLists.txt  README  README.md  TODOLIST  dispatcher.cpp  test.db
Dao/: BaseDao.cpp  BaseDao.h  DataClasses.cpp  DataClasses.h  userDao.cpp  userDao.h
HttpServerHeaders/: Jsonable.cpp  Jsonable.h  apibehavior.h  friendApi.cpp  friendApi.h  messageapi.cpp  messageapi.h  sessionapi.cpp  sessionapi.h  socialapi.cpp  types.h  userapi.cpp  userapi.h  utils.h
apis/: FriendApi.cpp  FriendApi.h  GroupApi.cpp  GroupApi.h  MessageApi.cpp  MessageApi.h  SessionApi.cpp  SessionApi.h  SocialApi.cpp  SocialApi.h  UserApi.cpp  UserApi.h
broadcast/: BroadCastThread.cpp  BroadCastThread.h  chatclient.html  chatclient.js  chatclient2.html  chatserver.cpp  chatserver.h
dao/: BaseDao.cpp  BaseDao.h  DataClasses.cpp  DataClasses.h  UserDao.cpp  UserDao.h
samplefiles/colorpalette/: CMakeLists.txt  apibehavior.h  types.h  utils.h
samplefiles/simplechat/: CMakeLists.txt  chatserver.cpp  chatserver.h  main.cpp
samplefiles/simpletest/: CMakeLists.txt  test.cpp
samplefiles/singleGroupTest/: CMakeLists.txt
service/: FriendService.cpp  FriendService.h  GroupService.cpp  GroupService.h  MessageService.cpp  MessageService.h  UserService.cpp  UserService.h  friendService.cpp  friendService.h  messageService.cpp  messageService.h  userService.cpp  userService.h
singleGroupTest/: CMakeLists.txt  chatserver.cpp  chatserver.h  main.cpp
sourceFiles/: sessions.json
sqlite/: chat.sql
test/: CMakeLists.txt  dbfortest.db
test/servicetest/: CMakeLists.txt  messageServiceTest.cpp
testClientAndReceiveApi/: ClientListen.cpp  ClientListen.h
utils/: Jsonable.cpp  types.h  utils.h
